--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
   "name": "surface",
   "version": "0.0.1",
-  "description": "ui of surface",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com:roboWong/d3js01.git"
-  },
-  "author": "surface",
-  "license": "",
-  "homepage": "",
+  "license": "ISC",
   "dependencies": {
+    "@angular/common": "~2.0.1",
+    "@angular/compiler": "~2.0.1",
+    "@angular/core": "~2.0.1",
+    "@angular/forms": "~2.0.1",
+    "@angular/http": "~2.0.1",
+    "@angular/platform-browser": "~2.0.1",
+    "@angular/platform-browser-dynamic": "~2.0.1",
+    "@angular/router": "~3.0.1",
+    "@angular/upgrade": "~2.0.1",
+    "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.6.3",
-    "jquery": "^2.2.4",
-    "node-uuid": "^1.4.7"
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
-    "browserify": "^13.1.0",
+    "concurrently": "^3.0.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
