--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
+    "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
+    "gulp-less": "^3.1.0",
+    "jquery": "^3.1.1",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
     "typings": "^1.4.0"
