--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~2.0.1",
     "@angular/router": "~3.0.1",
     "@angular/upgrade": "~2.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.8",
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
