--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "concurrently": "^3.0.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^3.0.2",
     "jquery": "^3.1.1",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
