--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.13",
+    "gulp-concat": "^2.6.0",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^3.0.2",
+    "gulp-uglify": "^2.0.0",
     "jquery": "^3.1.1",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
