--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "concurrently": "^3.0.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.1.0",
