--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "blueimp-md5": "^2.4.0",
     "concurrently": "^3.0.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
